v19.0/enums/GC.Spread.Sheets.Collaboration.OpType.md
# Enumeration: OpType

[Sheets](../modules/GC.Spread.Sheets.md).[Collaboration](../modules/GC.Spread.Sheets.Collaboration.md).OpType

定义操作类型。

## Table of contents

### Enumeration members

- [addAutoMerge](GC.Spread.Sheets.Collaboration.OpType.md#addautomerge)
- [addCellState](GC.Spread.Sheets.Collaboration.OpType.md#addcellstate)
- [addColumns](GC.Spread.Sheets.Collaboration.OpType.md#addcolumns)
- [addComment](GC.Spread.Sheets.Collaboration.OpType.md#addcomment)
- [addCustomDocProp](GC.Spread.Sheets.Collaboration.OpType.md#addcustomdocprop)
- [addCustomTheme](GC.Spread.Sheets.Collaboration.OpType.md#addcustomtheme)
- [addDataValidator](GC.Spread.Sheets.Collaboration.OpType.md#adddatavalidator)
- [addExternalReference](GC.Spread.Sheets.Collaboration.OpType.md#addexternalreference)
- [addNamedStyle](GC.Spread.Sheets.Collaboration.OpType.md#addnamedstyle)
- [addPivotCache](GC.Spread.Sheets.Collaboration.OpType.md#addpivotcache)
- [addPivotField](GC.Spread.Sheets.Collaboration.OpType.md#addpivotfield)
- [addPivotSlicerCache](GC.Spread.Sheets.Collaboration.OpType.md#addpivotslicercache)
- [addPivotTable](GC.Spread.Sheets.Collaboration.OpType.md#addpivottable)
- [addRows](GC.Spread.Sheets.Collaboration.OpType.md#addrows)
- [addRule](GC.Spread.Sheets.Collaboration.OpType.md#addrule)
- [addShape](GC.Spread.Sheets.Collaboration.OpType.md#addshape)
- [addSheet](GC.Spread.Sheets.Collaboration.OpType.md#addsheet)
- [addSheetNamedStyle](GC.Spread.Sheets.Collaboration.OpType.md#addsheetnamedstyle)
- [addSheetTabStyle](GC.Spread.Sheets.Collaboration.OpType.md#addsheettabstyle)
- [addSpan](GC.Spread.Sheets.Collaboration.OpType.md#addspan)
- [addSparklineEx](GC.Spread.Sheets.Collaboration.OpType.md#addsparklineex)
- [addSparklineForGroup](GC.Spread.Sheets.Collaboration.OpType.md#addsparklineforgroup)
- [addSparklineGroup](GC.Spread.Sheets.Collaboration.OpType.md#addsparklinegroup)
- [addTable](GC.Spread.Sheets.Collaboration.OpType.md#addtable)
- [addTableColumn](GC.Spread.Sheets.Collaboration.OpType.md#addtablecolumn)
- [addTableItemSlicerCache](GC.Spread.Sheets.Collaboration.OpType.md#addtableitemslicercache)
- [addTableRow](GC.Spread.Sheets.Collaboration.OpType.md#addtablerow)
- [addThreadedComment](GC.Spread.Sheets.Collaboration.OpType.md#addthreadedcomment)
- [addThreadedCommentReply](GC.Spread.Sheets.Collaboration.OpType.md#addthreadedcommentreply)
- [clearCustomDocProp](GC.Spread.Sheets.Collaboration.OpType.md#clearcustomdocprop)
- [clearCustomFunction](GC.Spread.Sheets.Collaboration.OpType.md#clearcustomfunction)
- [clearCustomName](GC.Spread.Sheets.Collaboration.OpType.md#clearcustomname)
- [clearFormatStringName](GC.Spread.Sheets.Collaboration.OpType.md#clearformatstringname)
- [clearRange](GC.Spread.Sheets.Collaboration.OpType.md#clearrange)
- [clearRule](GC.Spread.Sheets.Collaboration.OpType.md#clearrule)
- [clearSheetScopeCustomFunction](GC.Spread.Sheets.Collaboration.OpType.md#clearsheetscopecustomfunction)
- [clearSheetScopeCustomName](GC.Spread.Sheets.Collaboration.OpType.md#clearsheetscopecustomname)
- [clearSheetTabStyle](GC.Spread.Sheets.Collaboration.OpType.md#clearsheettabstyle)
- [clearSheets](GC.Spread.Sheets.Collaboration.OpType.md#clearsheets)
- [clearSparklineForGroup](GC.Spread.Sheets.Collaboration.OpType.md#clearsparklineforgroup)
- [deleteColumns](GC.Spread.Sheets.Collaboration.OpType.md#deletecolumns)
- [deleteGroupItem](GC.Spread.Sheets.Collaboration.OpType.md#deletegroupitem)
- [deleteRows](GC.Spread.Sheets.Collaboration.OpType.md#deleterows)
- [groupSparkline](GC.Spread.Sheets.Collaboration.OpType.md#groupsparkline)
- [insertGroupItem](GC.Spread.Sheets.Collaboration.OpType.md#insertgroupitem)
- [preserveUnsupportedChart](GC.Spread.Sheets.Collaboration.OpType.md#preserveunsupportedchart)
- [removeAutoMerge](GC.Spread.Sheets.Collaboration.OpType.md#removeautomerge)
- [removeCellState](GC.Spread.Sheets.Collaboration.OpType.md#removecellstate)
- [removeComment](GC.Spread.Sheets.Collaboration.OpType.md#removecomment)
- [removeCustomDocProp](GC.Spread.Sheets.Collaboration.OpType.md#removecustomdocprop)
- [removeCustomTheme](GC.Spread.Sheets.Collaboration.OpType.md#removecustomtheme)
- [removeDataValidator](GC.Spread.Sheets.Collaboration.OpType.md#removedatavalidator)
- [removeNamedStyle](GC.Spread.Sheets.Collaboration.OpType.md#removenamedstyle)
- [removePivotCache](GC.Spread.Sheets.Collaboration.OpType.md#removepivotcache)
- [removePivotField](GC.Spread.Sheets.Collaboration.OpType.md#removepivotfield)
- [removePivotSlicerCache](GC.Spread.Sheets.Collaboration.OpType.md#removepivotslicercache)
- [removePivotTable](GC.Spread.Sheets.Collaboration.OpType.md#removepivottable)
- [removeRule](GC.Spread.Sheets.Collaboration.OpType.md#removerule)
- [removeShape](GC.Spread.Sheets.Collaboration.OpType.md#removeshape)
- [removeSheet](GC.Spread.Sheets.Collaboration.OpType.md#removesheet)
- [removeSheetNamedStyle](GC.Spread.Sheets.Collaboration.OpType.md#removesheetnamedstyle)
- [removeSheetTabStyle](GC.Spread.Sheets.Collaboration.OpType.md#removesheettabstyle)
- [removeSpan](GC.Spread.Sheets.Collaboration.OpType.md#removespan)
- [removeSparklineEx](GC.Spread.Sheets.Collaboration.OpType.md#removesparklineex)
- [removeSparklineForGroup](GC.Spread.Sheets.Collaboration.OpType.md#removesparklineforgroup)
- [removeSparklineGroup](GC.Spread.Sheets.Collaboration.OpType.md#removesparklinegroup)
- [removeTable](GC.Spread.Sheets.Collaboration.OpType.md#removetable)
- [removeTableColumn](GC.Spread.Sheets.Collaboration.OpType.md#removetablecolumn)
- [removeTableItemSlicerCache](GC.Spread.Sheets.Collaboration.OpType.md#removetableitemslicercache)
- [removeTableRow](GC.Spread.Sheets.Collaboration.OpType.md#removetablerow)
- [removeThreadedComment](GC.Spread.Sheets.Collaboration.OpType.md#removethreadedcomment)
- [removeThreadedCommentReply](GC.Spread.Sheets.Collaboration.OpType.md#removethreadedcommentreply)
- [reorderChildShape](GC.Spread.Sheets.Collaboration.OpType.md#reorderchildshape)
- [reorderShape](GC.Spread.Sheets.Collaboration.OpType.md#reordershape)
- [reorderSheet](GC.Spread.Sheets.Collaboration.OpType.md#reordersheet)
- [setActiveSheetId](GC.Spread.Sheets.Collaboration.OpType.md#setactivesheetid)
- [setAxisOptions](GC.Spread.Sheets.Collaboration.OpType.md#setaxisoptions)
- [setAxisSize](GC.Spread.Sheets.Collaboration.OpType.md#setaxissize)
- [setCellState](GC.Spread.Sheets.Collaboration.OpType.md#setcellstate)
- [setColumnCount](GC.Spread.Sheets.Collaboration.OpType.md#setcolumncount)
- [setCurrentTheme](GC.Spread.Sheets.Collaboration.OpType.md#setcurrenttheme)
- [setCustomDocProps](GC.Spread.Sheets.Collaboration.OpType.md#setcustomdocprops)
- [setCustomFunction](GC.Spread.Sheets.Collaboration.OpType.md#setcustomfunction)
- [setCustomName](GC.Spread.Sheets.Collaboration.OpType.md#setcustomname)
- [setDataValidatorRange](GC.Spread.Sheets.Collaboration.OpType.md#setdatavalidatorrange)
- [setDirection](GC.Spread.Sheets.Collaboration.OpType.md#setdirection)
- [setFileInfo](GC.Spread.Sheets.Collaboration.OpType.md#setfileinfo)
- [setFilter](GC.Spread.Sheets.Collaboration.OpType.md#setfilter)
- [setFormatStringName](GC.Spread.Sheets.Collaboration.OpType.md#setformatstringname)
- [setFrozen](GC.Spread.Sheets.Collaboration.OpType.md#setfrozen)
- [setGroupItems](GC.Spread.Sheets.Collaboration.OpType.md#setgroupitems)
- [setGroupSparklines](GC.Spread.Sheets.Collaboration.OpType.md#setgroupsparklines)
- [setOutlineColumnOptions](GC.Spread.Sheets.Collaboration.OpType.md#setoutlinecolumnoptions)
- [setOutlineColumnProperty](GC.Spread.Sheets.Collaboration.OpType.md#setoutlinecolumnproperty)
- [setPrintInfo](GC.Spread.Sheets.Collaboration.OpType.md#setprintinfo)
- [setPrintInfoOption](GC.Spread.Sheets.Collaboration.OpType.md#setprintinfooption)
- [setRange](GC.Spread.Sheets.Collaboration.OpType.md#setrange)
- [setRowCount](GC.Spread.Sheets.Collaboration.OpType.md#setrowcount)
- [setSelectionPolicyAndUnit](GC.Spread.Sheets.Collaboration.OpType.md#setselectionpolicyandunit)
- [setSheetAreaAutoMerge](GC.Spread.Sheets.Collaboration.OpType.md#setsheetareaautomerge)
- [setSheetBackgroundImage](GC.Spread.Sheets.Collaboration.OpType.md#setsheetbackgroundimage)
- [setSheetName](GC.Spread.Sheets.Collaboration.OpType.md#setsheetname)
- [setSheetScopeCustomFunction](GC.Spread.Sheets.Collaboration.OpType.md#setsheetscopecustomfunction)
- [setSheetScopeCustomName](GC.Spread.Sheets.Collaboration.OpType.md#setsheetscopecustomname)
- [setSheetVisible](GC.Spread.Sheets.Collaboration.OpType.md#setsheetvisible)
- [setStartSheetIndex](GC.Spread.Sheets.Collaboration.OpType.md#setstartsheetindex)
- [setTabSelected](GC.Spread.Sheets.Collaboration.OpType.md#settabselected)
- [setTableColumnProperty](GC.Spread.Sheets.Collaboration.OpType.md#settablecolumnproperty)
- [setTableLayoutStyle](GC.Spread.Sheets.Collaboration.OpType.md#settablelayoutstyle)
- [setTableProperty](GC.Spread.Sheets.Collaboration.OpType.md#settableproperty)
- [setWorkbookOptions](GC.Spread.Sheets.Collaboration.OpType.md#setworkbookoptions)
- [setWorkbookProperty](GC.Spread.Sheets.Collaboration.OpType.md#setworkbookproperty)
- [setWorksheetOptions](GC.Spread.Sheets.Collaboration.OpType.md#setworksheetoptions)
- [showFooter](GC.Spread.Sheets.Collaboration.OpType.md#showfooter)
- [showHeader](GC.Spread.Sheets.Collaboration.OpType.md#showheader)
- [showOutline](GC.Spread.Sheets.Collaboration.OpType.md#showoutline)
- [sortSwap](GC.Spread.Sheets.Collaboration.OpType.md#sortswap)
- [switchPivotCache](GC.Spread.Sheets.Collaboration.OpType.md#switchpivotcache)
- [updateCellState](GC.Spread.Sheets.Collaboration.OpType.md#updatecellstate)
- [updateChart](GC.Spread.Sheets.Collaboration.OpType.md#updatechart)
- [updateChartSeries](GC.Spread.Sheets.Collaboration.OpType.md#updatechartseries)
- [updateComment](GC.Spread.Sheets.Collaboration.OpType.md#updatecomment)
- [updateCustomDocProp](GC.Spread.Sheets.Collaboration.OpType.md#updatecustomdocprop)
- [updateCustomTheme](GC.Spread.Sheets.Collaboration.OpType.md#updatecustomtheme)
- [updateDataValidator](GC.Spread.Sheets.Collaboration.OpType.md#updatedatavalidator)
- [updateDocProp](GC.Spread.Sheets.Collaboration.OpType.md#updatedocprop)
- [updateDocPropForApp](GC.Spread.Sheets.Collaboration.OpType.md#updatedocpropforapp)
- [updateDocPropForCore](GC.Spread.Sheets.Collaboration.OpType.md#updatedocpropforcore)
- [updateExternalReference](GC.Spread.Sheets.Collaboration.OpType.md#updateexternalreference)
- [updateFieldsModel](GC.Spread.Sheets.Collaboration.OpType.md#updatefieldsmodel)
- [updateFilterButtonVisibleInfo](GC.Spread.Sheets.Collaboration.OpType.md#updatefilterbuttonvisibleinfo)
- [updateFilterData](GC.Spread.Sheets.Collaboration.OpType.md#updatefilterdata)
- [updateFilterRange](GC.Spread.Sheets.Collaboration.OpType.md#updatefilterrange)
- [updateFilterSortInfo](GC.Spread.Sheets.Collaboration.OpType.md#updatefiltersortinfo)
- [updatePivotCache](GC.Spread.Sheets.Collaboration.OpType.md#updatepivotcache)
- [updatePivotCacheField](GC.Spread.Sheets.Collaboration.OpType.md#updatepivotcachefield)
- [updatePivotSlicerCacheProperty](GC.Spread.Sheets.Collaboration.OpType.md#updatepivotslicercacheproperty)
- [updatePivotTableLayout](GC.Spread.Sheets.Collaboration.OpType.md#updatepivottablelayout)
- [updatePivotTableOptions](GC.Spread.Sheets.Collaboration.OpType.md#updatepivottableoptions)
- [updateRule](GC.Spread.Sheets.Collaboration.OpType.md#updaterule)
- [updateShapeFormula](GC.Spread.Sheets.Collaboration.OpType.md#updateshapeformula)
- [updateShapeProp](GC.Spread.Sheets.Collaboration.OpType.md#updateshapeprop)
- [updateShapeTransform](GC.Spread.Sheets.Collaboration.OpType.md#updateshapetransform)
- [updateSheetDefaultsOptions](GC.Spread.Sheets.Collaboration.OpType.md#updatesheetdefaultsoptions)
- [updateSlicerProperty](GC.Spread.Sheets.Collaboration.OpType.md#updateslicerproperty)
- [updateSortState](GC.Spread.Sheets.Collaboration.OpType.md#updatesortstate)
- [updateSpan](GC.Spread.Sheets.Collaboration.OpType.md#updatespan)
- [updateSparkline](GC.Spread.Sheets.Collaboration.OpType.md#updatesparkline)
- [updateSparklineGroup](GC.Spread.Sheets.Collaboration.OpType.md#updatesparklinegroup)
- [updateTableItemSlicerCacheProperty](GC.Spread.Sheets.Collaboration.OpType.md#updatetableitemslicercacheproperty)
- [updateTablePosition](GC.Spread.Sheets.Collaboration.OpType.md#updatetableposition)
- [updateThreadedComment](GC.Spread.Sheets.Collaboration.OpType.md#updatethreadedcomment)
- [updateThreadedCommentReply](GC.Spread.Sheets.Collaboration.OpType.md#updatethreadedcommentreply)
- [updateTopLeftPosition](GC.Spread.Sheets.Collaboration.OpType.md#updatetopleftposition)
- [updateZoom](GC.Spread.Sheets.Collaboration.OpType.md#updatezoom)

## Enumeration members

### <a id="addautomerge" name="addautomerge"></a> addAutoMerge

• **addAutoMerge** = `311`

添加自动合并

___

### <a id="addcellstate" name="addcellstate"></a> addCellState

• **addCellState** = `351`

添加单元格状态

___

### <a id="addcolumns" name="addcolumns"></a> addColumns

• **addColumns** = `39`

添加列

___

### <a id="addcomment" name="addcomment"></a> addComment

• **addComment** = `161`

添加注释

___

### <a id="addcustomdocprop" name="addcustomdocprop"></a> addCustomDocProp

• **addCustomDocProp** = `21`

添加自定义文档属性

___

### <a id="addcustomtheme" name="addcustomtheme"></a> addCustomTheme

• **addCustomTheme** = `12`

添加自定义主题

___

### <a id="adddatavalidator" name="adddatavalidator"></a> addDataValidator

• **addDataValidator** = `361`

添加数据验证器

___

### <a id="addexternalreference" name="addexternalreference"></a> addExternalReference

• **addExternalReference** = `101`

添加外部引用

___

### <a id="addnamedstyle" name="addnamedstyle"></a> addNamedStyle

• **addNamedStyle** = `8`

添加命名样式

___

### <a id="addpivotcache" name="addpivotcache"></a> addPivotCache

• **addPivotCache** = `251`

添加数据透视表缓存

___

### <a id="addpivotfield" name="addpivotfield"></a> addPivotField

• **addPivotField** = `275`

添加数据透视表字段

___

### <a id="addpivotslicercache" name="addpivotslicercache"></a> addPivotSlicerCache

• **addPivotSlicerCache** = `394`

添加数据透视表切片器缓存。

___

### <a id="addpivottable" name="addpivottable"></a> addPivotTable

• **addPivotTable** = `271`

添加数据透视表

___

### <a id="addrows" name="addrows"></a> addRows

• **addRows** = `33`

添加行

___

### <a id="addrule" name="addrule"></a> addRule

• **addRule** = `301`

添加规则

___

### <a id="addshape" name="addshape"></a> addShape

• **addShape** = `201`

添加形状

___

### <a id="addsheet" name="addsheet"></a> addSheet

• **addSheet** = `1`

添加工作表

___

### <a id="addsheetnamedstyle" name="addsheetnamedstyle"></a> addSheetNamedStyle

• **addSheetNamedStyle** = `10`

添加工作表命名样式

___

### <a id="addsheettabstyle" name="addsheettabstyle"></a> addSheetTabStyle

• **addSheetTabStyle** = `15`

添加工作表标签样式

___

### <a id="addspan" name="addspan"></a> addSpan

• **addSpan** = `35`

添加合并单元格

___

### <a id="addsparklineex" name="addsparklineex"></a> addSparklineEx

• **addSparklineEx** = `321`

添加迷你图

___

### <a id="addsparklineforgroup" name="addsparklineforgroup"></a> addSparklineForGroup

• **addSparklineForGroup** = `328`

为组添加迷你图

___

### <a id="addsparklinegroup" name="addsparklinegroup"></a> addSparklineGroup

• **addSparklineGroup** = `324`

添加迷你图组

___

### <a id="addtable" name="addtable"></a> addTable

• **addTable** = `171`

添加表格

___

### <a id="addtablecolumn" name="addtablecolumn"></a> addTableColumn

• **addTableColumn** = `180`

添加表格列

___

### <a id="addtableitemslicercache" name="addtableitemslicercache"></a> addTableItemSlicerCache

• **addTableItemSlicerCache** = `391`

添加表格项切片器缓存。

___

### <a id="addtablerow" name="addtablerow"></a> addTableRow

• **addTableRow** = `177`

添加表格行

___

### <a id="addthreadedcomment" name="addthreadedcomment"></a> addThreadedComment

• **addThreadedComment** = `410`

添加评论。

___

### <a id="addthreadedcommentreply" name="addthreadedcommentreply"></a> addThreadedCommentReply

• **addThreadedCommentReply** = `413`

添加评论回复。

___

### <a id="clearcustomdocprop" name="clearcustomdocprop"></a> clearCustomDocProp

• **clearCustomDocProp** = `23`

清除自定义文档属性

___

### <a id="clearcustomfunction" name="clearcustomfunction"></a> clearCustomFunction

• **clearCustomFunction** = `59`

清除自定义函数

___

### <a id="clearcustomname" name="clearcustomname"></a> clearCustomName

• **clearCustomName** = `31`

清除自定义名称

___

### <a id="clearformatstringname" name="clearformatstringname"></a> clearFormatStringName

• **clearFormatStringName** = `63`

清除格式字符串名称

___

### <a id="clearrange" name="clearrange"></a> clearRange

• **clearRange** = `51`

清除范围

___

### <a id="clearrule" name="clearrule"></a> clearRule

• **clearRule** = `304`

清除规则

___

### <a id="clearsheetscopecustomfunction" name="clearsheetscopecustomfunction"></a> clearSheetScopeCustomFunction

• **clearSheetScopeCustomFunction** = `60`

清除工作表作用域的自定义函数

___

### <a id="clearsheetscopecustomname" name="clearsheetscopecustomname"></a> clearSheetScopeCustomName

• **clearSheetScopeCustomName** = `32`

清除工作表范围自定义名称

___

### <a id="clearsheettabstyle" name="clearsheettabstyle"></a> clearSheetTabStyle

• **clearSheetTabStyle** = `17`

清除工作表标签样式

___

### <a id="clearsheets" name="clearsheets"></a> clearSheets

• **clearSheets** = `3`

清除所有工作表

___

### <a id="clearsparklineforgroup" name="clearsparklineforgroup"></a> clearSparklineForGroup

• **clearSparklineForGroup** = `330`

清除组中的迷你图

___

### <a id="deletecolumns" name="deletecolumns"></a> deleteColumns

• **deleteColumns** = `40`

删除列

___

### <a id="deletegroupitem" name="deletegroupitem"></a> deleteGroupItem

• **deleteGroupItem** = `149`

删除分组项

___

### <a id="deleterows" name="deleterows"></a> deleteRows

• **deleteRows** = `34`

删除行

___

### <a id="groupsparkline" name="groupsparkline"></a> groupSparkline

• **groupSparkline** = `326`

组合迷你图

___

### <a id="insertgroupitem" name="insertgroupitem"></a> insertGroupItem

• **insertGroupItem** = `147`

插入分组项

___

### <a id="preserveunsupportedchart" name="preserveunsupportedchart"></a> preserveUnsupportedChart

• **preserveUnsupportedChart** = `223`

保留不支持的图表。

___

### <a id="removeautomerge" name="removeautomerge"></a> removeAutoMerge

• **removeAutoMerge** = `312`

删除自动合并

___

### <a id="removecellstate" name="removecellstate"></a> removeCellState

• **removeCellState** = `352`

删除单元格状态

___

### <a id="removecomment" name="removecomment"></a> removeComment

• **removeComment** = `162`

删除注释

___

### <a id="removecustomdocprop" name="removecustomdocprop"></a> removeCustomDocProp

• **removeCustomDocProp** = `22`

删除自定义文档属性

___

### <a id="removecustomtheme" name="removecustomtheme"></a> removeCustomTheme

• **removeCustomTheme** = `13`

删除自定义主题

___

### <a id="removedatavalidator" name="removedatavalidator"></a> removeDataValidator

• **removeDataValidator** = `363`

删除数据验证器

___

### <a id="removenamedstyle" name="removenamedstyle"></a> removeNamedStyle

• **removeNamedStyle** = `9`

删除命名样式

___

### <a id="removepivotcache" name="removepivotcache"></a> removePivotCache

• **removePivotCache** = `252`

删除数据透视表缓存

___

### <a id="removepivotfield" name="removepivotfield"></a> removePivotField

• **removePivotField** = `276`

删除数据透视表字段

___

### <a id="removepivotslicercache" name="removepivotslicercache"></a> removePivotSlicerCache

• **removePivotSlicerCache** = `396`

移除数据透视表切片器缓存。

___

### <a id="removepivottable" name="removepivottable"></a> removePivotTable

• **removePivotTable** = `272`

删除数据透视表

___

### <a id="removerule" name="removerule"></a> removeRule

• **removeRule** = `303`

删除规则

___

### <a id="removeshape" name="removeshape"></a> removeShape

• **removeShape** = `202`

删除形状

___

### <a id="removesheet" name="removesheet"></a> removeSheet

• **removeSheet** = `2`

删除工作表

___

### <a id="removesheetnamedstyle" name="removesheetnamedstyle"></a> removeSheetNamedStyle

• **removeSheetNamedStyle** = `11`

删除工作表命名样式

___

### <a id="removesheettabstyle" name="removesheettabstyle"></a> removeSheetTabStyle

• **removeSheetTabStyle** = `16`

删除工作表标签样式

___

### <a id="removespan" name="removespan"></a> removeSpan

• **removeSpan** = `36`

删除合并单元格

___

### <a id="removesparklineex" name="removesparklineex"></a> removeSparklineEx

• **removeSparklineEx** = `322`

删除迷你图

___

### <a id="removesparklineforgroup" name="removesparklineforgroup"></a> removeSparklineForGroup

• **removeSparklineForGroup** = `329`

从组中删除迷你图

___

### <a id="removesparklinegroup" name="removesparklinegroup"></a> removeSparklineGroup

• **removeSparklineGroup** = `325`

删除迷你图组

___

### <a id="removetable" name="removetable"></a> removeTable

• **removeTable** = `172`

删除表格

___

### <a id="removetablecolumn" name="removetablecolumn"></a> removeTableColumn

• **removeTableColumn** = `181`

删除表格列

___

### <a id="removetableitemslicercache" name="removetableitemslicercache"></a> removeTableItemSlicerCache

• **removeTableItemSlicerCache** = `393`

移除表格项切片器缓存。

___

### <a id="removetablerow" name="removetablerow"></a> removeTableRow

• **removeTableRow** = `178`

删除表格行

___

### <a id="removethreadedcomment" name="removethreadedcomment"></a> removeThreadedComment

• **removeThreadedComment** = `412`

移除评论。

___

### <a id="removethreadedcommentreply" name="removethreadedcommentreply"></a> removeThreadedCommentReply

• **removeThreadedCommentReply** = `415`

移除评论回复。

___

### <a id="reorderchildshape" name="reorderchildshape"></a> reorderChildShape

• **reorderChildShape** = `209`

重排子形状顺序

___

### <a id="reordershape" name="reordershape"></a> reorderShape

• **reorderShape** = `203`

重排形状顺序

___

### <a id="reordersheet" name="reordersheet"></a> reorderSheet

• **reorderSheet** = `4`

重排工作表顺序

___

### <a id="setactivesheetid" name="setactivesheetid"></a> setActiveSheetId

• **setActiveSheetId** = `6`

设置活动工作表ID

___

### <a id="setaxisoptions" name="setaxisoptions"></a> setAxisOptions

• **setAxisOptions** = `47`

设置轴选项

___

### <a id="setaxissize" name="setaxissize"></a> setAxisSize

• **setAxisSize** = `45`

设置轴大小

___

### <a id="setcellstate" name="setcellstate"></a> setCellState

• **setCellState** = `354`

设置单元格状态

___

### <a id="setcolumncount" name="setcolumncount"></a> setColumnCount

• **setColumnCount** = `42`

设置列数

___

### <a id="setcurrenttheme" name="setcurrenttheme"></a> setCurrentTheme

• **setCurrentTheme** = `50`

设置当前主题

___

### <a id="setcustomdocprops" name="setcustomdocprops"></a> setCustomDocProps

• **setCustomDocProps** = `25`

设置自定义文档属性

___

### <a id="setcustomfunction" name="setcustomfunction"></a> setCustomFunction

• **setCustomFunction** = `57`

设置自定义函数

___

### <a id="setcustomname" name="setcustomname"></a> setCustomName

• **setCustomName** = `29`

设置自定义名称

___

### <a id="setdatavalidatorrange" name="setdatavalidatorrange"></a> setDataValidatorRange

• **setDataValidatorRange** = `364`

设置数据验证器范围

___

### <a id="setdirection" name="setdirection"></a> setDirection

• **setDirection** = `145`

设置方向

___

### <a id="setfileinfo" name="setfileinfo"></a> setFileInfo

• **setFileInfo** = `53`

设置文件信息

___

### <a id="setfilter" name="setfilter"></a> setFilter

• **setFilter** = `121`

设置筛选

___

### <a id="setformatstringname" name="setformatstringname"></a> setFormatStringName

• **setFormatStringName** = `62`

设置格式字符串名称

___

### <a id="setfrozen" name="setfrozen"></a> setFrozen

• **setFrozen** = `43`

设置冻结

___

### <a id="setgroupitems" name="setgroupitems"></a> setGroupItems

• **setGroupItems** = `148`

设置分组项

___

### <a id="setgroupsparklines" name="setgroupsparklines"></a> setGroupSparklines

• **setGroupSparklines** = `327`

设置组合迷你图

___

### <a id="setoutlinecolumnoptions" name="setoutlinecolumnoptions"></a> setOutlineColumnOptions

• **setOutlineColumnOptions** = `371`

设置大纲列选项

___

### <a id="setoutlinecolumnproperty" name="setoutlinecolumnproperty"></a> setOutlineColumnProperty

• **setOutlineColumnProperty** = `372`

设置大纲列属性

___

### <a id="setprintinfo" name="setprintinfo"></a> setPrintInfo

• **setPrintInfo** = `381`

设置打印信息

___

### <a id="setprintinfooption" name="setprintinfooption"></a> setPrintInfoOption

• **setPrintInfoOption** = `382`

设置打印信息选项

___

### <a id="setrange" name="setrange"></a> setRange

• **setRange** = `28`

设置范围

___

### <a id="setrowcount" name="setrowcount"></a> setRowCount

• **setRowCount** = `41`

设置行数

___

### <a id="setselectionpolicyandunit" name="setselectionpolicyandunit"></a> setSelectionPolicyAndUnit

• **setSelectionPolicyAndUnit** = `64`

设置选择策略和单位

___

### <a id="setsheetareaautomerge" name="setsheetareaautomerge"></a> setSheetAreaAutoMerge

• **setSheetAreaAutoMerge** = `313`

设置工作表区域自动合并

___

### <a id="setsheetbackgroundimage" name="setsheetbackgroundimage"></a> setSheetBackgroundImage

• **setSheetBackgroundImage** = `56`

设置工作表背景图片

___

### <a id="setsheetname" name="setsheetname"></a> setSheetName

• **setSheetName** = `27`

设置工作表名称

___

### <a id="setsheetscopecustomfunction" name="setsheetscopecustomfunction"></a> setSheetScopeCustomFunction

• **setSheetScopeCustomFunction** = `58`

设置工作表作用域的自定义函数

___

### <a id="setsheetscopecustomname" name="setsheetscopecustomname"></a> setSheetScopeCustomName

• **setSheetScopeCustomName** = `30`

设置工作表范围自定义名称

___

### <a id="setsheetvisible" name="setsheetvisible"></a> setSheetVisible

• **setSheetVisible** = `52`

设置工作表可见性

___

### <a id="setstartsheetindex" name="setstartsheetindex"></a> setStartSheetIndex

• **setStartSheetIndex** = `5`

设置起始工作表索引

___

### <a id="settabselected" name="settabselected"></a> setTabSelected

• **setTabSelected** = `26`

设置标签选中状态

___

### <a id="settablecolumnproperty" name="settablecolumnproperty"></a> setTableColumnProperty

• **setTableColumnProperty** = `182`

设置表格列属性

___

### <a id="settablelayoutstyle" name="settablelayoutstyle"></a> setTableLayoutStyle

• **setTableLayoutStyle** = `176`

设置表格布局样式

___

### <a id="settableproperty" name="settableproperty"></a> setTableProperty

• **setTableProperty** = `175`

设置表格属性

___

### <a id="setworkbookoptions" name="setworkbookoptions"></a> setWorkbookOptions

• **setWorkbookOptions** = `7`

设置工作簿选项

___

### <a id="setworkbookproperty" name="setworkbookproperty"></a> setWorkbookProperty

• **setWorkbookProperty** = `55`

设置工作簿属性

___

### <a id="setworksheetoptions" name="setworksheetoptions"></a> setWorksheetOptions

• **setWorksheetOptions** = `49`

设置工作表选项

___

### <a id="showfooter" name="showfooter"></a> showFooter

• **showFooter** = `174`

显示表尾

___

### <a id="showheader" name="showheader"></a> showHeader

• **showHeader** = `173`

显示表头

___

### <a id="showoutline" name="showoutline"></a> showOutline

• **showOutline** = `146`

显示大纲

___

### <a id="sortswap" name="sortswap"></a> sortSwap

• **sortSwap** = `111`

排序交换

___

### <a id="switchpivotcache" name="switchpivotcache"></a> switchPivotCache

• **switchPivotCache** = `254`

切换数据透视表缓存

___

### <a id="updatecellstate" name="updatecellstate"></a> updateCellState

• **updateCellState** = `353`

更新单元格状态

___

### <a id="updatechart" name="updatechart"></a> updateChart

• **updateChart** = `222`

更新图表

___

### <a id="updatechartseries" name="updatechartseries"></a> updateChartSeries

• **updateChartSeries** = `221`

更新图表系列

___

### <a id="updatecomment" name="updatecomment"></a> updateComment

• **updateComment** = `163`

更新注释

___

### <a id="updatecustomdocprop" name="updatecustomdocprop"></a> updateCustomDocProp

• **updateCustomDocProp** = `24`

更新自定义文档属性

___

### <a id="updatecustomtheme" name="updatecustomtheme"></a> updateCustomTheme

• **updateCustomTheme** = `14`

更新自定义主题

___

### <a id="updatedatavalidator" name="updatedatavalidator"></a> updateDataValidator

• **updateDataValidator** = `362`

更新数据验证器

___

### <a id="updatedocprop" name="updatedocprop"></a> updateDocProp

• **updateDocProp** = `18`

更新文档属性

___

### <a id="updatedocpropforapp" name="updatedocpropforapp"></a> updateDocPropForApp

• **updateDocPropForApp** = `19`

更新应用程序文档属性

___

### <a id="updatedocpropforcore" name="updatedocpropforcore"></a> updateDocPropForCore

• **updateDocPropForCore** = `20`

更新核心文档属性

___

### <a id="updateexternalreference" name="updateexternalreference"></a> updateExternalReference

• **updateExternalReference** = `102`

更新外部引用

___

### <a id="updatefieldsmodel" name="updatefieldsmodel"></a> updateFieldsModel

• **updateFieldsModel** = `274`

更新字段模型

___

### <a id="updatefilterbuttonvisibleinfo" name="updatefilterbuttonvisibleinfo"></a> updateFilterButtonVisibleInfo

• **updateFilterButtonVisibleInfo** = `125`

更新筛选按钮可见性信息

___

### <a id="updatefilterdata" name="updatefilterdata"></a> updateFilterData

• **updateFilterData** = `128`

更新筛选数据

___

### <a id="updatefilterrange" name="updatefilterrange"></a> updateFilterRange

• **updateFilterRange** = `126`

更新筛选范围

___

### <a id="updatefiltersortinfo" name="updatefiltersortinfo"></a> updateFilterSortInfo

• **updateFilterSortInfo** = `124`

更新筛选排序信息

___

### <a id="updatepivotcache" name="updatepivotcache"></a> updatePivotCache

• **updatePivotCache** = `253`

更新数据透视表缓存

___

### <a id="updatepivotcachefield" name="updatepivotcachefield"></a> updatePivotCacheField

• **updatePivotCacheField** = `255`

更新数据透视表缓存字段

___

### <a id="updatepivotslicercacheproperty" name="updatepivotslicercacheproperty"></a> updatePivotSlicerCacheProperty

• **updatePivotSlicerCacheProperty** = `395`

更新数据透视表切片器缓存属性。

___

### <a id="updatepivottablelayout" name="updatepivottablelayout"></a> updatePivotTableLayout

• **updatePivotTableLayout** = `273`

更新数据透视表布局

___

### <a id="updatepivottableoptions" name="updatepivottableoptions"></a> updatePivotTableOptions

• **updatePivotTableOptions** = `277`

更新数据透视表配置。

___

### <a id="updaterule" name="updaterule"></a> updateRule

• **updateRule** = `302`

更新规则

___

### <a id="updateshapeformula" name="updateshapeformula"></a> updateShapeFormula

• **updateShapeFormula** = `205`

更新形状公式

___

### <a id="updateshapeprop" name="updateshapeprop"></a> updateShapeProp

• **updateShapeProp** = `204`

更新形状属性

___

### <a id="updateshapetransform" name="updateshapetransform"></a> updateShapeTransform

• **updateShapeTransform** = `206`

更新形状变换

___

### <a id="updatesheetdefaultsoptions" name="updatesheetdefaultsoptions"></a> updateSheetDefaultsOptions

• **updateSheetDefaultsOptions** = `61`

更新工作表默认选项

___

### <a id="updateslicerproperty" name="updateslicerproperty"></a> updateSlicerProperty

• **updateSlicerProperty** = `397`

更新切片器属性。

___

### <a id="updatesortstate" name="updatesortstate"></a> updateSortState

• **updateSortState** = `112`

更新排序状态

___

### <a id="updatespan" name="updatespan"></a> updateSpan

• **updateSpan** = `37`

更新合并单元格

___

### <a id="updatesparkline" name="updatesparkline"></a> updateSparkline

• **updateSparkline** = `331`

更新迷你图

___

### <a id="updatesparklinegroup" name="updatesparklinegroup"></a> updateSparklineGroup

• **updateSparklineGroup** = `323`

更新迷你图组

___

### <a id="updatetableitemslicercacheproperty" name="updatetableitemslicercacheproperty"></a> updateTableItemSlicerCacheProperty

• **updateTableItemSlicerCacheProperty** = `392`

更新表格项切片器缓存属性。

___

### <a id="updatetableposition" name="updatetableposition"></a> updateTablePosition

• **updateTablePosition** = `179`

更新表格位置

___

### <a id="updatethreadedcomment" name="updatethreadedcomment"></a> updateThreadedComment

• **updateThreadedComment** = `411`

更新评论。

___

### <a id="updatethreadedcommentreply" name="updatethreadedcommentreply"></a> updateThreadedCommentReply

• **updateThreadedCommentReply** = `414`

更新评论回复。

___

### <a id="updatetopleftposition" name="updatetopleftposition"></a> updateTopLeftPosition

• **updateTopLeftPosition** = `54`

更新左上角位置

___

### <a id="updatezoom" name="updatezoom"></a> updateZoom

• **updateZoom** = `46`

更新缩放
